improve state management, add i18n
